restructured files, started java gcal api client test code